2011-03-09  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: Web Inspector: we don't need to transfer objectId and hasChildren for primitive values.
        https://bugs.webkit.org/show_bug.cgi?id=55998

        * inspector/InjectedScriptSource.js:

2011-03-09  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: watch expressions should show string values in quotes.
        https://bugs.webkit.org/show_bug.cgi?id=55846

        * inspector/InjectedScriptSource.js:
        * inspector/front-end/ObjectPropertiesSection.js:
        (WebInspector.ObjectPropertyTreeElement.prototype.update):
        * inspector/front-end/RemoteObject.js:
        (WebInspector.LocalJSONObject.prototype.get description):
        * inspector/front-end/WatchExpressionsSidebarPane.js:
        (WebInspector.WatchExpressionsSection.prototype.update):
        * inspector/front-end/inspector.css:
        (.console-formatted-string, .console-formatted-regexp):

2011-03-09  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: "length" getter is invoked upon console object formatting.
        https://bugs.webkit.org/show_bug.cgi?id=55220

        * inspector/InjectedScriptSource.js:

2011-03-08  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: remove groupName from objectId.
        https://bugs.webkit.org/show_bug.cgi?id=55825

        * inspector/InjectedScriptSource.js:

2011-03-08  Xiaomei Ji  <xji@chromium.org>

        Reviewed by David Hyatt.

        Fix Regression: Content not drawn when scrolling horizontally in an RTL page.
        https://bugs.webkit.org/show_bug.cgi?id=55077.

        Inside ScrollView::calculateOverhangAreasForPainting(), when scroll position
        is negative, should include the position value into overhang rectangle's 
        starting position. 
